Ported "PDF417 encoder, modified from Barcode4J"

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,12 +32,14 @@ gcstang
 Hannes Erven
 hypest (Barcorama project)
 Isaac Potoczny-Jones
+Jacob Haynes (Google)
 Jeff Breidenbach (Google)
 John Connolly (Bug Labs)
 Jonas Petersson (Prisjakt)
 Joseph Wain (Google)
 Juho Mikkonen
 jwicks
+Kamil Kaczmarczyk
 Kevin O'Sullivan (SITA)
 Kevin Xue (NetDragon Websoft Inc., China)
 Lachezar Dobrev
