--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Joseph Wain (Google)
 Juho Mikkonen
 jwicks
 Kamil Kaczmarczyk
+Kazuki Nishiura
 Kevin O'Sullivan (SITA)
 Kevin Xue (NetDragon Websoft Inc., China)
 Lachezar Dobrev
