Added some additional character encodings

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ drejc83
 Eduardo Castillejo (University of Deusto)
 Emanuele Aina
 Eric Kobrin (Velocitude)
+evansepdx
 Erik Barbara
 Fred Lin (Anobiit)
 gcstang
@@ -34,6 +35,7 @@ hypest (Barcorama project)
 Isaac Potoczny-Jones
 Jacob Haynes (Google)
 Jeff Breidenbach (Google)
+Joan Montané (Softcatalà.cat)
 John Connolly (Bug Labs)
 Jonas Petersson (Prisjakt)
 Joseph Wain (Google)
@@ -58,6 +60,7 @@ Morgan Courbet
 Nikolaos Ftylitakis
 Pablo Orduña (University of Deusto)
 Paul Hackenberger
+perennialmind
 Ralf Kistner
 Randy Shen (Acer)
 Rasmus Schrøder Sørensen
