--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Matrix44
 Matthew Schulkind (Google)
 Matt York (LifeMarks)
 mike32767
+mikej06
 Mohamad Fairol
 Morgan Courbet
 Nikolaos Ftylitakis
