Ported from ZXing: "Issue 1288 PDF417 barcode flipped"

--- a/AUTHORS
+++ b/AUTHORS
@@ -64,6 +64,7 @@ mikej06
 Mohamad Fairol
 Morgan Courbet
 Nikolaos Ftylitakis
+Olli
 Pablo Orduña (University of Deusto)
 Paul Hackenberger
 perennialmind
