Ported r2454 from ZXing
Original commit message: "Issue 1376 Check EAN13 checksum when encoding"

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Aitor Almeida (University of Deusto)
 Alasdair Mackintosh (Google)
 Alex Dupre
 Alexander Martin (Haase & Martin GmbH)
+Alexander Schmidt
 Anders Borg
 Andreas Pillath
 Andrew Walbran (Google)
@@ -37,6 +38,7 @@ Erik Barbara
 Fred Lin (Anobiit)
 gcstang
 Hannes Erven
+hosigumayuugi
 hypest (Barcorama project)
 Isaac Potoczny-Jones
 Jacob Haynes (Google)
@@ -45,6 +47,7 @@ Joan Montané (Softcatalà.cat)
 John Connolly (Bug Labs)
 Jonas Petersson (Prisjakt)
 Joseph Wain (Google)
+Juha Kuitunen
 Juho Mikkonen
 jwicks
 Kamil Kaczmarczyk
@@ -54,6 +57,7 @@ Kevin Xue (NetDragon Websoft Inc., China)
 Lachezar Dobrev
 Luiz Silva
 Luka Finžgar
+Malte Starostik
 Manuel Kasten
 Marcelo
 Mateusz Jędrasik
@@ -84,6 +88,7 @@ Simon Flannery (Ericsson)
 Steven Parkes
 Suraj Supekar
 Sven Klinkhamer
+techinstantdx
 Thomas Gerbet
 Tim Gernat
 v.anestis
