Ported r2509 from ZXing
Original commit message: "Issue 1432 errata from GS1 spec and support
for additional var length product field 8200"

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ mikej06
 Mohamad Fairol
 Morgan Courbet
 Nikolaos Ftylitakis
+Nikolaus Huber
 Olli
 Pablo Orduña (University of Deusto)
 Paul Hackenberger
