--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ gcstang
 Hannes Erven
 hosigumayuugi
 hypest (Barcorama project)
+Ian W. Davis
 Isaac Potoczny-Jones
 Jacob Haynes (Google)
 Jeff Breidenbach (Google)
