--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ evansepdx
 Erik Barbara
 Fred Lin (Anobiit)
 gcstang
+Guillaume Le Biller
 Hannes Erven
 hosigumayuugi
 hypest (Barcorama project)
@@ -90,6 +91,7 @@ Shiyuan Guo / 郭世元
 ShumovichY
 Simon Flannery (Ericsson)
 Steven Parkes
+stoty74
 Suraj Supekar
 Sven Klinkhamer
 techinstantdx
