--- a/AUTHORS
+++ b/AUTHORS
@@ -83,6 +83,7 @@ Rasmus Schrøder Sørensen
 Richard Hřivňák
 Romain Pechayre
 Roman Nurik (Google)
+Rustam Abdullaev
 Ryan Alford
 Sanford Squires
 Shachar Shemesh
