Ported r2594 from ZXing
Original commit message: "PDF417 improvements from Hartmut, Christoph"


Former-commit-id: 240c5f28262f36b1ec2c99f7e7ec95a8e0650bee

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Brian Brown (Google)
 Bruce Allen
 Chang Hyun Park
 Christian Brunschen (Google)
+Christoph Schulz (creatale GmbH)
 Costa Walcott (SCVNGR)
 crowdin.net
 Daniel Switkin (Google)
@@ -40,6 +41,7 @@ Fred Lin (Anobiit)
 gcstang
 Guillaume Le Biller
 Hannes Erven
+Hartmut Neubauer (Schweers Informationstechnologie GmbH)
 hosigumayuugi
 hypest (Barcorama project)
 Ian W. Davis
