Ported r2639 from ZXing
Original commit message: "More PDF417 test images from Guenther"


Former-commit-id: 1bf488f1dd1e375c2c34b04c4335cd271e7acdee

--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ evansepdx
 Erik Barbara
 Fred Lin (Anobiit)
 gcstang
+Guenther Grau
 Guillaume Le Biller
 Hannes Erven
 Hartmut Neubauer (Schweers Informationstechnologie GmbH)
