--- a/AUTHORS
+++ b/AUTHORS
@@ -63,6 +63,7 @@ Kevin Xue (NetDragon Websoft Inc., China)
 Lachezar Dobrev
 Luiz Silva
 Luka Finžgar
+Łukasz Stefaniak
 Malte Starostik
 Manuel Kasten
 Marcelo
@@ -89,6 +90,7 @@ Roman Nurik (Google)
 Rustam Abdullaev
 Ryan Alford
 Sanford Squires
+Satoshi Kametaya
 Shachar Shemesh
 Sean Owen (Google)
 Shiyuan Guo / 郭世元
