Ported r2811 from ZXing
Original commit message: "Issue 1605 Frank's patch to improve Aztec
detection"


Former-commit-id: b867b6f8aa47aee1da351cbbc360ef36dce3270d

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,7 @@ Eric Kobrin (Velocitude)
 evansepdx
 Erik Barbara
 Francois B. (Google)
+Frank Yellin
 Fred Lin (Anobiit)
 gcstang
 Guenther Grau
@@ -101,6 +102,7 @@ Steven Parkes
 stoty74
 Suraj Supekar
 Sven Klinkhamer
+taku0
 techinstantdx
 Thomas Gerbet
 Tim Gernat
